fix overlap issue with title and menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,7 @@ h2 {
 
 
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 730px) {
     
 /* Nav Bar Media */
     #navbar {
